# mediaforge

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  config.example.py  out.mkv  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
docker/: dockerentry.sh  installbgpot.sh
rendering/heartlocket/: dark.mkv  light.mkv  mapper2.mkv  neutral.mkv
src/: main.py
src/cog/: bgpot.py  botevents.py  commandchecks.py  errorhandler.py  guild_bans.py  heartbeat.py
src/commands/: caption.py  conversion.py  debug.py  image.py  media.py  other.py
src/core/: clogs.py  process.py
src/processing/: common.py  mediatype.py  other.py  run_command.py  sus.py
src/processing/ffmpeg/: caption.py  conversion.py  creation.py  ensuresize.py  ffprobe.py  ffutils.py  glc.py  handleanimated.py  heartlocket.py  mediatype.py  other.py
src/processing/vips/: caption.py  creation.py  other.py  vipsutils.py
src/utils/: discordmisc.py  scandiscord.py  tempfiles.py  trymagic.py  web.py
