[project]
name = "mediaforge"
version = "2.0.0"
description = "A Discord bot for editing and creating videos, images, GIFs, and more!"
authors = ["machineonamission"]
license = "GPL-3.0"
package-mode = false
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "apng>=0.3.4",
    "audioop-lts>=0.2.1 ; python_version >= \"3.13\"",
    "brotli>=1.1.0",
    "coloredlogs>=15.0.1",
    "discord-py>=2.4.0",
    "discordlists-py>=1.1.1",
    "docstring-parser>=0.16",
    "emojis>=0.7.0",
    "humanize>=4.12.0",
    "orjson>=3.10.15",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "python-magic>=0.4.13 ; sys_platform != 'win32'",
    "python-magic-win64>=0.4.13 ; sys_platform == 'win32'",
    "pyvips>=2.2.3",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "tblib>=3.0.0",
    "yt-dlp>=2025.1.26",
]

