[project]
name = "mediaforge"
version = "2.0.0"
description = "A Discord bot for editing and creating videos, images, GIFs, and more!"
authors = [{ name = "machineonamission" }]
license = { text = "AGPL-3.0-or-later + Commons Clause" }
requires-python = ">=3.11"

dependencies = [
    "discord-py[speed]>=2.4.0",
    "aiofiles>=24.1.0",
    "humanize>=4.8.0",
    "coloredlogs>=15.0.1",
    "Pillow>=11.3.0",
    "regex>=2025.9.18",
    "aiosqlite>=0.21.0",
    "psutil>=7.0.0",
    "apng>=0.3.4",
    "docstring-parser>=0.17",
    "emojis>=0.7.0",
    "requests>=2.31.0",
    "discordlists.py>=1.1.1",
    "pyvips>=3.0.0",
    "tblib>=3.0.0",
    "bgutil-ytdlp-pot-provider>=1.1.0",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "python-magic>=0.4.13; sys_platform != 'win32'",
    "python-magic-win64>=0.4.13; sys_platform == 'win32'",
    "yt-dlp[curl-cffi,default]>=2025.12.8",
]
